// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Component should render initial layout 1`] = `
Array [
  <div
    className="outer-panel"
>
    <div
        className="panel-body"
    >
        <h2
            className="title"
        >
            List of Chefs
        </h2>
        <div
            className="input-fields"
        >
            <ChefList
                chefs={
                    Array [
                        Object {
                          "bio": "Chef for 5 years",
                          "name": "Jae",
                          "rating": "5 stars",
                        },
                        Object {
                          "bio": "Chef for 6 years",
                          "name": "Kevin",
                          "rating": "5 stars",
                        },
                        Object {
                          "bio": "Chef for 7 years",
                          "name": "Audrey",
                          "rating": "5 stars",
                        },
                      ]
                }
            />
        </div>
    </div>
    <div
        className="panel-footer"
    >
        <Link
            replace={false}
            to="login"
        >
            <button
                className="btn back-btn"
            >
                Go Back
            </button>
        </Link>
        <Link
            replace={false}
            to="chat"
        >
            <button
                className="btn next-btn"
            >
                Chat!
            </button>
        </Link>
    </div>
</div>,
]
`;

exports[`Submit Button should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ListChefs
    name="btn back-btn"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="panel-body"
>
          <h2
                    className="title"
          >
                    List of Chefs
          </h2>
          <div
                    className="input-fields"
          >
                    <ChefList
                              chefs={
                                        Array [
                                                  Object {
                                                    "bio": "Chef for 5 years",
                                                    "name": "Jae",
                                                    "rating": "5 stars",
                                                  },
                                                  Object {
                                                    "bio": "Chef for 6 years",
                                                    "name": "Kevin",
                                                    "rating": "5 stars",
                                                  },
                                                  Object {
                                                    "bio": "Chef for 7 years",
                                                    "name": "Audrey",
                                                    "rating": "5 stars",
                                                  },
                                                ]
                              }
                    />
          </div>
</div>,
        <div
          className="panel-footer"
>
          <Link
                    replace={false}
                    to="login"
          >
                    <button
                              className="btn back-btn"
                    >
                              Go Back
                    </button>
          </Link>
          <Link
                    replace={false}
                    to="chat"
          >
                    <button
                              className="btn next-btn"
                    >
                              Chat!
                    </button>
          </Link>
</div>,
      ],
      "className": "outer-panel",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="title"
>
              List of Chefs
</h2>,
            <div
              className="input-fields"
>
              <ChefList
                            chefs={
                                          Array [
                                                        Object {
                                                          "bio": "Chef for 5 years",
                                                          "name": "Jae",
                                                          "rating": "5 stars",
                                                        },
                                                        Object {
                                                          "bio": "Chef for 6 years",
                                                          "name": "Kevin",
                                                          "rating": "5 stars",
                                                        },
                                                        Object {
                                                          "bio": "Chef for 7 years",
                                                          "name": "Audrey",
                                                          "rating": "5 stars",
                                                        },
                                                      ]
                            }
              />
</div>,
          ],
          "className": "panel-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "List of Chefs",
              "className": "title",
            },
            "ref": null,
            "rendered": "List of Chefs",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ChefList
                chefs={
                                Array [
                                                Object {
                                                  "bio": "Chef for 5 years",
                                                  "name": "Jae",
                                                  "rating": "5 stars",
                                                },
                                                Object {
                                                  "bio": "Chef for 6 years",
                                                  "name": "Kevin",
                                                  "rating": "5 stars",
                                                },
                                                Object {
                                                  "bio": "Chef for 7 years",
                                                  "name": "Audrey",
                                                  "rating": "5 stars",
                                                },
                                              ]
                }
/>,
              "className": "input-fields",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "chefs": Array [
                  Object {
                    "bio": "Chef for 5 years",
                    "name": "Jae",
                    "rating": "5 stars",
                  },
                  Object {
                    "bio": "Chef for 6 years",
                    "name": "Kevin",
                    "rating": "5 stars",
                  },
                  Object {
                    "bio": "Chef for 7 years",
                    "name": "Audrey",
                    "rating": "5 stars",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              replace={false}
              to="login"
>
              <button
                            className="btn back-btn"
              >
                            Go Back
              </button>
</Link>,
            <Link
              replace={false}
              to="chat"
>
              <button
                            className="btn next-btn"
              >
                            Chat!
              </button>
</Link>,
          ],
          "className": "panel-footer",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <button
                className="btn back-btn"
>
                Go Back
</button>,
              "replace": false,
              "to": "login",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Go Back",
                "className": "btn back-btn",
              },
              "ref": null,
              "rendered": "Go Back",
              "type": "button",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <button
                className="btn next-btn"
>
                Chat!
</button>,
              "replace": false,
              "to": "chat",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Chat!",
                "className": "btn next-btn",
              },
              "ref": null,
              "rendered": "Chat!",
              "type": "button",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="panel-body"
>
            <h2
                        className="title"
            >
                        List of Chefs
            </h2>
            <div
                        className="input-fields"
            >
                        <ChefList
                                    chefs={
                                                Array [
                                                            Object {
                                                              "bio": "Chef for 5 years",
                                                              "name": "Jae",
                                                              "rating": "5 stars",
                                                            },
                                                            Object {
                                                              "bio": "Chef for 6 years",
                                                              "name": "Kevin",
                                                              "rating": "5 stars",
                                                            },
                                                            Object {
                                                              "bio": "Chef for 7 years",
                                                              "name": "Audrey",
                                                              "rating": "5 stars",
                                                            },
                                                          ]
                                    }
                        />
            </div>
</div>,
          <div
            className="panel-footer"
>
            <Link
                        replace={false}
                        to="login"
            >
                        <button
                                    className="btn back-btn"
                        >
                                    Go Back
                        </button>
            </Link>
            <Link
                        replace={false}
                        to="chat"
            >
                        <button
                                    className="btn next-btn"
                        >
                                    Chat!
                        </button>
            </Link>
</div>,
        ],
        "className": "outer-panel",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="title"
>
                List of Chefs
</h2>,
              <div
                className="input-fields"
>
                <ChefList
                                chefs={
                                                Array [
                                                                Object {
                                                                  "bio": "Chef for 5 years",
                                                                  "name": "Jae",
                                                                  "rating": "5 stars",
                                                                },
                                                                Object {
                                                                  "bio": "Chef for 6 years",
                                                                  "name": "Kevin",
                                                                  "rating": "5 stars",
                                                                },
                                                                Object {
                                                                  "bio": "Chef for 7 years",
                                                                  "name": "Audrey",
                                                                  "rating": "5 stars",
                                                                },
                                                              ]
                                }
                />
</div>,
            ],
            "className": "panel-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "List of Chefs",
                "className": "title",
              },
              "ref": null,
              "rendered": "List of Chefs",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ChefList
                  chefs={
                                    Array [
                                                      Object {
                                                        "bio": "Chef for 5 years",
                                                        "name": "Jae",
                                                        "rating": "5 stars",
                                                      },
                                                      Object {
                                                        "bio": "Chef for 6 years",
                                                        "name": "Kevin",
                                                        "rating": "5 stars",
                                                      },
                                                      Object {
                                                        "bio": "Chef for 7 years",
                                                        "name": "Audrey",
                                                        "rating": "5 stars",
                                                      },
                                                    ]
                  }
/>,
                "className": "input-fields",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "chefs": Array [
                    Object {
                      "bio": "Chef for 5 years",
                      "name": "Jae",
                      "rating": "5 stars",
                    },
                    Object {
                      "bio": "Chef for 6 years",
                      "name": "Kevin",
                      "rating": "5 stars",
                    },
                    Object {
                      "bio": "Chef for 7 years",
                      "name": "Audrey",
                      "rating": "5 stars",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                replace={false}
                to="login"
>
                <button
                                className="btn back-btn"
                >
                                Go Back
                </button>
</Link>,
              <Link
                replace={false}
                to="chat"
>
                <button
                                className="btn next-btn"
                >
                                Chat!
                </button>
</Link>,
            ],
            "className": "panel-footer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="btn back-btn"
>
                  Go Back
</button>,
                "replace": false,
                "to": "login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Go Back",
                  "className": "btn back-btn",
                },
                "ref": null,
                "rendered": "Go Back",
                "type": "button",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="btn next-btn"
>
                  Chat!
</button>,
                "replace": false,
                "to": "chat",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Chat!",
                  "className": "btn next-btn",
                },
                "ref": null,
                "rendered": "Chat!",
                "type": "button",
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
